--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    {% if navbar-navbar-brand == title %}
+    {% if navbar navbar-brand == title %}
     <title>{{ title }}</title>
     {% else %}
-    <title>{{ navbar-navbar-brand }} &middot; {{ title | safe}}</title>
+    <title>{{ navbar navbar-brand }} &middot; {{ title | safe}}</title>
     {% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
