--- a/templates/help/_cookies_policy.html
+++ b/templates/help/_cookies_policy.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-12">
-        <h1>How {{navbar-navbar-brand}} uses cookies</h1>
+        <h1>How {{navbar navbar-brand}} uses cookies</h1>
 
             <p>A cookie is a small piece of text sent to your browser by a website you visit. It helps the website to remember information about your visit, like your preferred language and other settings. That can make your next visit easier and the site more useful to you. Cookies play an important role. Without them, using the web would be a much more frustrating experience.</p>
             <p>In the following video from Google,  you can see a very good explanation about how cookies work:</p>
