More Bootstrap corrections

--- a/templates/help/_tos.html
+++ b/templates/help/_tos.html
@@ -8,10 +8,10 @@
         <section id="introduction">
             <h1>Introduction</h1>
 
-            <p>Welcome to <strong>{{navbar navbar-brand}}</strong>. These are the general terms and conditions on which we supply all our services.
+            <p>Welcome to <strong>{{navbar-brand}}</strong>. These are the general terms and conditions on which we supply all our services.
             If you use our services, you agree to abide by these terms.</p>
 
-            <p>At {{navbar navbar-brand}} we supply a lot of different services. Some of them will have specific terms tailored for them. If that is the case, {{brand}}’s contract with you for that service will be on these terms, supplemented by any terms specific to the service. In the case of any conflict, service specific terms will take precedence.</p>
+            <p>At {{navbar-brand}} we supply a lot of different services. Some of them will have specific terms tailored for them. If that is the case, {{brand}}’s contract with you for that service will be on these terms, supplemented by any terms specific to the service. In the case of any conflict, service specific terms will take precedence.</p>
 
             <p>We process personal data in accordance with the <a href="http://okfn.org/privacy-policy/">Open Knowledge Foundation privacy policy</a>. As part of this agreement you consent to our doing so. You should read the policy carefully, especially if you have any concerns about your privacy.</p>
 
@@ -124,7 +124,7 @@
 
             <p>Neither party is liable for anything which is beyond their reasonable control.</p>
 
-            <p>If for some reason beyond {{navbar navbar-brand}}’s reasonable control, we are unable to or it would not be commercially viable for us to, continue to supply any of our services, we may cease to supply that service, ending any agreement between us for its supply. If we do so, we will return to you a fair proportion of any sum you have paid us in advance for the supply of that service, taking into account the service we have already supplied to you.</p>
+            <p>If for some reason beyond {{navbar-brand}}’s reasonable control, we are unable to or it would not be commercially viable for us to, continue to supply any of our services, we may cease to supply that service, ending any agreement between us for its supply. If we do so, we will return to you a fair proportion of any sum you have paid us in advance for the supply of that service, taking into account the service we have already supplied to you.</p>
         </section>
     </div>
 </div>
