--- a/templates/help/license.html
+++ b/templates/help/license.html
@@ -5,9 +5,9 @@
 <div class="row">
     <div class="col-md-12">
         <section id="overview">
-            <h1><strong>{{navbar navbar-brand}}</strong>: Licenses</h1>
+            <h1><strong>{{navbar-brand}}</strong>: Licenses</h1>
             <p>
-            <strong>{{navbar navbar-brand}}</strong> uses the free and open source framework
+            <strong>{{navbar-brand}}</strong> uses the free and open source framework
             <a href="http://dev.pybossa.com">PyBossa</a> which is released under the 
             <a href="http://www.gnu.org/licenses/agpl-3.0.html">GNU Affero general public license version 3.0</a>.
             </p>
