--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -1,4 +1,4 @@
-    <div class="navbar-navbar-fixed-top">
+    <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <a class="btn navbar-btn" data-toggle="collapse" data-target=".nav-collapse">
