--- a/templates/help/api.html
+++ b/templates/help/api.html
@@ -7,8 +7,8 @@
 {% endif %}
 <div class="row">
     <div class="col-md-12">
-        <h1><strong>{{navbar navbar-brand}}</strong>: API Help</h1>
-        <p>{{navbar navbar-brand}} has a <a href="http://en.wikipedia.org/wiki/Representational_state_transfer">RESTful API</a> that can be used for creating new projects,
+        <h1><strong>{{navbar-brand}}</strong>: API Help</h1>
+        <p>{{navbar-brand}} has a <a href="http://en.wikipedia.org/wiki/Representational_state_transfer">RESTful API</a> that can be used for creating new projects,
         getting tasks, submitting answers, etc. The API end point is available at:
         </p>
         <ul>
