--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -6,7 +6,7 @@
       <div class="banner">
         <div class="row">
           <div class="col-md-4">
-              <h1>{{ navbar-brand }}</h1>
+              <h1>{{ brand }}</h1>
               {% include ['custom/front_page_text.html', 'home/_pybossa_text.html'] ignore missing %}
           </div>
           <div class="col-md-8">
