--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,4 +1,4 @@
-      <div class="container">
+ <div class="container">
         <div class="row" style="text-align:center;">
           <div class="col-md-4">
               <a href="http://citizencyberscience.net/"><img src="{{url_for('static', filename='img/ccc.png')}}"></a>
@@ -6,7 +6,7 @@
           <div class="col-md-4">
               <a href="http://okfn.org/"><img src="{{url_for('static', filename='img/okf.png')}}"></a>
           </div>
-          <!--<div class="col-md-3">
+          <!--<div class="span3">
               <a href="http://www.unige.ch/"><img src="{{url_for('static', filename='img/udg.png')}}"></a>
           </div>-->
           <div class="col-md-4">
