--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     <link rel="shortcut icon" href="/static/img/favicon.ico">
 
     <!-- Le javascript -->
-    <script type="text/javascript" src="{{url_for('static', filename='vendor/jquery.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='vendor/jquery-2.1.3.min.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='vendor/bootstrap-3.3.2/js/bootstrap.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='vendor/modernizr.min.js')}}"></script>
     <!-- Google Analytics or similar solutions -->
