--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -13,7 +13,7 @@
       {% else %}
       <h1>{{ _('Community') }} <small>{{total}} {{ _('registered users') }}</small><a class="pull-right btn btn-primary" href="{{url_for('leaderboard.index')}}"><i class="glyphicon glyphicon-trophy" style="color:white"></i> {{ _('Leaderboard') }}</a></h1>
       {% if accounts %}
-      <ul class="img-thumbnails">
+      <ul class="thumbnails">
       {% for account in accounts %}
           <li>
               <a href="{{url_for('account.profile', name=account.name)}}" class="img-thumbnail" rel='popover' title="<strong>{{account['fullname']}}</strong>" data-content="
