--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
+<!doctype html>
+<html lang="en"><head>
     <meta charset="utf-8">
-    {% if brand == title %}
+    </head><body>{% if brand == title %}
     <title>{{ title }}</title>
     {% else %}
-    <title>{{ brand }} &middot; {{ title | safe}}</title>
+    <title>{{ brand }} á {{ title | safe}}</title>
     {% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -33,9 +32,9 @@
     {% include '_ga.html' ignore missing %}
     <!-- Google Custom Search -->
     {% include '_gcs.html' ignore missing %}
-  </head>
+  
 
-  <body>
+  
     {% if not current_user.is_anonymous() %}
     <!-- checkpoint::logged-in::{{current_user.name}} -->
     {% endif %}
@@ -54,7 +53,7 @@
     </div> <!-- /container -->
     {% if show_cookies_warning %}
     <div id="cookies_warning">
-        <p>Cookies help us deliver our services. By using our services, you agree to our use of cookies. <button class="btn btn-xs btn-success" onclick="accept_cookies()"><i class="glyphicon glyphicon-thumbs-up"></i> OK</button> <a class="btn btn-mini" href="{{url_for('help.cookies_policy')}}"><i class="icon-info-sign"></i> More info</a></p>
+        <p>Cookies help us deliver our services. By using our services, you agree to our use of cookies. <button class="btn btn-xs btn-success" onclick="accept_cookies()"><i class="glyphicon glyphicon-thumbs-up"></i> OK</button> <a class="btn btn-default btn-xs" href="{{url_for('help.cookies_policy')}}"><i class="icon-info-sign"></i> More info</a></p>
     </div>
     {% endif %}
     <footer>
@@ -105,5 +104,5 @@
     <script>
     {% include 'cookies.js' %}
     </script>
-  </body>
-</html>
+  
+</body></html>
