Removed redundant tag

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -8,7 +8,7 @@
         <div class="row">
           <div class="col-offset-3 col-lg-6 text-center">
               <h1>{{ brand }}</h1>
-              <p></p>{% include ['custom/front_page_text.html', 'home/_pybossa_text.html'] ignore missing %}</p>
+              <p>{% include ['custom/front_page_text.html', 'home/_pybossa_text.html'] ignore missing %}</p>
           </div>
           </div>
       </div>      
