--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,14 +1,8 @@
  <div class="container">
         <div class="row" style="text-align:center;">
-          <div class="col-md-4">
-              <a href="http://citizencyberscience.net/"><img src="{{url_for('static', filename='img/ccc.png')}}"></a>
+          <div class="col-md-offset-2 col-md-4">
+              <a href="http://citizencyberscience.net/"><img src="{{url_for('static', filename='img/bl-logo.png')}}"></a>
           </div>
-          <div class="col-md-4">
-              <a href="http://okfn.org/"><img src="{{url_for('static', filename='img/okf.png')}}"></a>
-          </div>
-          <!--<div class="span3">
-              <a href="http://www.unige.ch/"><img src="{{url_for('static', filename='img/udg.png')}}"></a>
-          </div>-->
           <div class="col-md-4">
               <a href="http://pybossa.com/"><img src="{{url_for('static', filename='img/pybossa.png')}}"></a>
           </div>
