Repositioned logos and added BL link

--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,9 +1,9 @@
  <div class="container">
         <div class="row" style="text-align:center;">
-          <div class="col-md-offset-2 col-md-4">
-              <a href="http://citizencyberscience.net/"><img src="{{url_for('static', filename='img/bl-logo.png')}}"></a>
+          <div class="col-md-offset-3 col-md-3>
+              <a href="http://bl.uk/"><img src="{{url_for('static', filename='img/bl-logo.png')}}"></a>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
               <a href="http://pybossa.com/"><img src="{{url_for('static', filename='img/pybossa.png')}}"></a>
           </div>
         </div>
