--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,6 +1,6 @@
  <div class="container">
         <div class="row" style="text-align:center;">
-          <div class="col-md-offset-3 col-md-3>
+          <div class="col-md-offset-3 col-md-3">
               <a href="http://bl.uk/"><img src="{{url_for('static', filename='img/bl-logo.png')}}"></a>
           </div>
           <div class="col-md-3">
