Corrected error following Bootstrap migration

--- a/templates/help/_cookies_policy.html
+++ b/templates/help/_cookies_policy.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-12">
-        <h1>How {{navbar-brand}} uses cookies</h1>
+        <h1>How {{brand}} uses cookies</h1>
 
             <p>A cookie is a small piece of text sent to your browser that helps a website remember information about your visit.
             This information can be used the next time you vist to provide a better user experience.</p>
