Modified cookie policy text

--- a/templates/help/_cookies_policy.html
+++ b/templates/help/_cookies_policy.html
@@ -2,12 +2,11 @@
     <div class="col-md-12">
         <h1>How {{brand}} uses cookies</h1>
 
-            <p>A cookie is a small piece of text sent to your browser that helps a website remember information about your visit.
-            This information can be used the next time you vist to provide a better user experience.</p>
+            <p>Cookies help a website remember information about your visit in order to improve your experience over subsequent visits.</p>
             <p>The following video from Google explains how cookies work:</p>
             <iframe width="560" height="315" src="//www.youtube.com/embed/TBR-xtJVq7E" frameborder="0" allowfullscreen></iframe>
 
         <h2>Disabling cookies</h2>
-        <p>If you want to disable cookies, check the help section of your browser</p>
+        <p>If you want to disable cookies check the help section of your browser.</p>
     </div>
 </div>
