Updated the footer

--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,10 +1,16 @@
- <div class="container">
-        <div class="row" style="text-align:center;">
-          <div class="col-md-offset-3 col-md-3">
-              <a href="http://bl.uk/"><img src="{{url_for('static', filename='img/bl-logo.png')}}"></a>
-          </div>
-          <div class="col-md-3">
-              <a href="http://pybossa.com/"><img src="{{url_for('static', filename='img/pybossa.png')}}"></a>
-          </div>
-        </div>
-      </div>
+ 
+<div id="footer_links"class="container">
+  <div class="row center">
+    <div class="col-md-offset-1 col-md-3">
+      <a href="http://bl.uk/"><img src="{{url_for('static', filename='img/bl-logo.png')}}"></a>
+    </div>
+      <ul class="col-md-4 footerLinks">
+        <li><i class="glyphicon glyphicon-envelope"></i> <a href="mailto:{{contact_email}}">{{ _('Email') }}</a></li>
+        <li><i class="glyphicon glyphicon-twitter"></i> <a href="http://twitter.com/{{contact_twitter}}">{{ _('Twitter') }}</a></li>
+        <li><i class="icon-info-sign glyphicon-inverse"></i> <a href="/about">About</a></li>
+      </ul>
+    <div class="col-md-3">
+      <a href="http://pybossa.com/"><img src="{{url_for('static', filename='img/pybossa.png')}}"></a>
+    </div>
+  </div>
+</div>
