--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -4,7 +4,7 @@
     <div class="col-md-offset-1 col-md-3">
       <a href="http://bl.uk/"><img src="{{url_for('static', filename='img/bl-logo.png')}}"></a>
     </div>
-      <ul class="col-md-4 list-inline center">
+      <ul class="col-md-4 list-inline footerbar">
         <li><i class="glyphicon glyphicon-envelope glyphicon-inverse"></i> <a href="mailto:{{contact_email}}">{{ _('Email') }}</a></li>  
         <li><i class="icon-twitter glyphicon-inverse"></i> <a href="http://twitter.com/{{contact_twitter}}">{{ _('Twitter') }}</a></li>  
         <li><i class="icon-info-sign glyphicon-inverse"></i> <a href="/about">About</a></li>
