Final attempt and aligning links to bottom of div

--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -4,7 +4,7 @@
     <div class="col-md-offset-1 col-md-3">
       <a href="http://bl.uk/"><img src="{{url_for('static', filename='img/bl-logo.png')}}"></a>
     </div>
-      <div class="footerbar"></div>
+      <div class="footerbar">
         <ul class="col-md-4 list-inline">
           <li><i class="glyphicon glyphicon-envelope glyphicon-inverse"></i> <a href="mailto:{{contact_email}}">{{ _('Email') }}</a></li>  
           <li><i class="icon-twitter glyphicon-inverse"></i> <a href="http://twitter.com/{{contact_twitter}}">{{ _('Twitter') }}</a></li>  
