--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -227,17 +227,6 @@ body {
   color: #8bbf36;
 }
 
-@media (min-width: 768px) {
-    .footerbar {
-        position: absolute;
-        text-align: center;
-	bottom: 0;
-    }
-    
-    .footerbar > ul {
-        display: inline-block;
-    }
-}
 
 .banner {
   background-color: #f7f7f7;
@@ -336,6 +325,11 @@ body > footer .container {
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
+.footer-links li {
+    display: inline;
+}
+
 /* Home Page */
 /* ========= */
 .banner > .row .span4 {
