Set images as responsive

--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -2,17 +2,17 @@
 <div class="container">
     <div class="row center">
       <div class="col-md-offset-3 col-md-3">
-        <a href="http://bl.uk/"><img src="{{url_for('static', filename='img/bl-logo.png')}}"></a>
+        <a href="http://bl.uk/"><img class="img-responsive center-block" src="{{url_for('static', filename='img/bl-logo.png')}}"></a>
       </div>
       <div class="col-md-3">
-        <a href="http://pybossa.com/"><img src="{{url_for('static', filename='img/pybossa.png')}}"></a>
+        <a href="http://pybossa.com/"><img class="img-responsive center-block" src="{{url_for('static', filename='img/pybossa.png')}}"></a>
       </div>
     </div>
   </div>
 </div>
   <div id="footer_links" class="container">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-12 display-inline">
           <ul>
             <li><i class="glyphicon glyphicon-envelope glyphicon-inverse"></i> <a href="mailto:{{contact_email}}">{{ _('Email') }}</a></li>  
             <li><i class="icon-twitter glyphicon-inverse"></i> <a href="http://twitter.com/{{contact_twitter}}">{{ _('Twitter') }}</a></li>  
